commit 7bb725517f3f8cbe8beb3ee86846236a111d4cb6
Date:   Thu Jun 11 20:37:36 2015 +0300

    Added share/doc/09OTPpnAmgc.txt to document the charting,
    and made OpenTrader/OTPpnAmgc.py install as script.

commit e42c95363378bc6f473541b362ba5aea5deab955
Date:   Thu Jun 11 19:13:21 2015 +0300

    Added share/doc/07TestsFeatures.txt

commit 8167f6f849b4b41bdbbbb4cf254ae376477ba3d6
Date:   Thu Jun 11 13:54:50 2015 +0300

    Added pytest-bdd tests in tests/features/OTCmd2_ini.feature
    Just a beginning for now.

commit 163a83161ef0977e1386e043a2787292765401d6
Date:   Wed Jun 10 21:55:58 2015 +0300

    Added share/doc/15OTCmd2_backtest.txt and updated documentation.

commit b3ae7440c93d4ea3ea0a2f3a6aeb2ffd2f58c1c0
Date:   Wed Jun 10 21:02:50 2015 +0300

    Completed share/examples/OTCmd2-backtest.test test example.

commit bff957d55e403abae66613140895fa260de559e5
Date:   Wed Jun 10 15:52:26 2015 +0300

    Added more examples as tests in share/examples.

commit 117518ae0ea8ea13590c49ac998b85547c962320
Date:   Wed Jun 10 00:05:14 2015 +0300

    Added some examples to start testing in share/examples.

commit 29a4659b3d2163c3b3a0e8376203f6ff7956680e
Date:   Tue Jun 9 11:28:16 2015 +0300

    Added share/doc/06Omlettes.txt - the API is still changing and
    the documentation and tests aren't done yet.

commit ed7dc647ff037f52f5d50adf8cbcccc249f7916d
Date:   Fri Jun 5 22:17:41 2015 +0300

    Renamed PikaCmd2 to OTCmd2 and added OpenTrader/OTBackTest.py

commit 23e3bdd8b91987931c2d75ded980dea5f5241b52
Date:   Fri Jun 5 00:10:21 2015 +0300

    Added share/doc/05PikaCmd2.txt

commit 595f3ff2f3348c7b3bc5a14844b9bf128487ed67
Date:   Thu Jun 4 23:52:40 2015 +0300

    Fixed formatting a little more.

commit 4c7abed70d25840cc879c7f29fa53fc62e7260c1
Date:   Thu Jun 4 23:44:43 2015 +0300

    Fixed some of the documentation formatting.

commit 1dd8b4d1cc0065e6189da70274976c321aef07b0
Date:   Thu Jun 4 23:27:35 2015 +0300
